--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "^4.7.4",
+    "react-native-vector-icons": "^10.0.2",
     "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
