--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -18,7 +18,11 @@
     "axios": "^1.6.2",
     "core-js": "^3.34.0",
     "expo": "~49.0.15",
+    "expo-auth-session": "~5.0.2",
+    "expo-dev-client": "~2.4.12",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "~12.3.2",
     "jwt-decode": "^4.0.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -26,7 +30,8 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-picker-select": "^9.0.0",
-    "react-native-safe-area-context": "^4.7.4",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "~3.18.0",
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.2",
     "tailwind-rn": "^4.2.0"
