--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "expo": "~49.0.15",
     "expo-auth-session": "~5.0.2",
     "expo-dev-client": "~2.4.12",
+    "expo-image-picker": "^14.5.0",
+    "expo-permissions": "^14.4.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "~12.3.2",
@@ -34,8 +36,10 @@
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "^14.1.0",
+    "react-native-tesseract-ocr": "^2.0.3",
     "react-native-vector-icons": "^10.0.2",
-    "tailwind-rn": "^4.2.0"
+    "tailwind-rn": "^4.2.0",
+    "tesseract.js": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
